# 27th-Web-Team-3-BE

./: .coderabbit.yaml  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.md  automation.config.yaml  build.gradle  claude.md  docker-compose.logging.yml  docker-compose.monitoring.yml  docker-compose.yml
.claude/: settings.json  settings.local.json
.claude/commands/: build.md  check.md  create-pr.md  doc.md  e2e-test.md  fix-issue.md  quality.md  review-pr.md  run.md  test.md
.claude/config/: fix-limits.yaml  rollback-triggers.yaml
.claude/hooks/: architecture-check.md
.claude/rules/: api-design.md  rust-src.md  rust-tests.md  tidy-first-commit.md
.gemini/: GEMINI.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  discord-notify.yml  pr-check.yml  release.yml  rust-ci.yml  terraform.yml  test_deploy.yml
ci/nginx/: api.conf
ci/scripts/: setup-ssl.sh
ci/terraform/: .gitignore  README.md  backend.tf  ec2.tf  outputs.tf  providers.tf  rds.tf  route53.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
codes/: .gitignore  Cargo.toml  QUICKSTART.md  README.md
codes/server/: .env  .env.example  Cargo.toml  docker-compose.yml
codes/server/scripts/: test-api.sh
codes/server/src/: config.rs  lib.rs  main.rs  state.rs
codes/server/src/automation/: mod.rs  safety.rs
codes/server/src/config/: app_config.rs  database.rs  mod.rs
codes/server/src/domain/: mod.rs
codes/server/src/domain/ai/: client.rs  dto.rs  handler.rs  mod.rs  prompt.rs  retry.rs  service.rs
codes/server/src/domain/ai/prompt/: mod.rs
codes/server/src/domain/auth/: dto.rs  handler.rs  service.rs
codes/server/src/domain/health/: handler.rs  mod.rs
codes/server/src/domain/member/: dto.rs  handler.rs  service.rs
codes/server/src/domain/member/entity/: assistant_usage.rs  member.rs  member_response.rs  member_retro.rs  member_retro_room.rs  mod.rs  refresh_token.rs
codes/server/src/domain/retrospect/: dto.rs  handler.rs  mod.rs  service.rs
codes/server/src/domain/retrospect/entity/: mod.rs  response.rs  response_comment.rs  response_like.rs  retro_reference.rs  retro_room.rs  retrospect.rs
codes/server/src/domain/team/entity/: member_team.rs  mod.rs  team.rs
codes/server/src/domain/webhook/: discord_handler.rs  dto.rs  github_handler.rs  mod.rs
codes/server/src/event/: event_types.rs  file_queue.rs  mod.rs  queue.rs  trigger.rs
codes/server/src/global/: middleware.rs  mod.rs  rate_limit.rs
codes/server/src/monitoring/: discord_alert.rs  log_watcher.rs  mod.rs  processor.rs
codes/server/src/tests/: api_004_retro_room_create_test.rs  api_005_retro_room_join_test.rs  api_006_retro_room_list_test.rs  api_007_retro_room_order_test.rs  api_008_retro_room_name_test.rs  api_009_retro_room_delete_test.rs  api_010_retro_room_retrospects_test.rs  mod.rs  retro_room_api_test.rs
codes/server/src/util/: response.rs
codes/server/src/utils/: auth.rs  cookie.rs  error.rs  jwt.rs  logging.rs  mod.rs  response.rs
codes/server/tests/: ai_analysis_live_test.rs  api_004_retro_room_create_test.rs  api_005_retro_room_join_test.rs  api_006_retro_room_list_test.rs  api_007_retro_room_order_test.rs  api_008_retro_room_name_test.rs  api_009_retro_room_delete_test.rs  api_010_retro_room_retrospects_test.rs  api_030_retro_room_members_test.rs  api_test.rs  auth_test.rs  member_withdraw_test.rs  response_comment_test.rs  response_like_test.rs  retrospect_detail_test.rs  retrospect_export_test.rs  retrospect_responses_list_test.rs  retrospect_storage_test.rs  retrospect_submit_test.rs  retrospect_test.rs
codes/src/: error.rs  main.rs
codes/src/handlers/: echo.rs  health.rs  mod.rs  user.rs
codes/tests/: user_info_test.rs
docs/: README.md  ai_collaboration_guide.md  api_documentation.md  rust-migration-complete.md  user_info.md
docs/ai-automation/: overview.md  phase-1-event-trigger.md  phase-2-issue-analysis.md  phase-3-ai-diagnostic.md  phase-3-code-fix.md  phase-4-issue-automation.md  phase-4-pr-creation.md  phase-5-auto-fix-pr.md  security-governance.md
docs/ai-conventions/: architecture.md  claude.md
docs/ai-monitoring/: 00-overview.md  MOC.md  README.md  overview.canvas  phase-1-log-foundation.md  phase-2-monitoring-mvp.md  phase-3-ai-diagnostic.md  phase-4-automation.md  pipeline-guide.md
docs/api-specs/: 001-auth-social-login.md  002-auth-signup.md  003-auth-logout.md  003-auth-token-refresh.md  004-auth-logout.md  004-retro-room-create.md  004-team-create.md  005-retro-room-create.md  005-retro-room-join.md  (+63 more)
java/: README.md
jvm/: build.gradle
local/: 회고 작성 가이드 api.md
monitoring/: alert-rules.yml  alertmanager.yml  loki-config.yml  prometheus.yml  promtail-config.yml
rust/: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README_RATELIMITER.md  SUMMARY.md  build.sh  test_api.sh  test_rate_limiter.sh
rust/docs/: RATE_LIMITER.md  RATE_LIMITER_REPORT.md  인증API.md
rust/src/: config.rs  domain.rs  error.rs  main.rs  rate_limiter.rs  response.rs  shutdown.rs
rust/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  routes.rs  service.rs
rust/src/common/: error.rs  mod.rs  response.rs
rust/src/document/: 회고 말투 정제 API.md  회고 작성 가이드 API.md  회고 작성 가이드.md
rust/src/domain/: ai.rs
rust/src/domain/ai/: controller.rs  handler.rs  mod.rs  prompt.rs  service.rs  tests.rs  validator.rs
rust/src/domain/ai/prompt/: examples.rs  guide.rs  refine.rs
rust/src/domain/auth/: controller.rs  mod.rs  service.rs
rust/src/domain/docs/: retrospective_guide.md
rust/src/domain/health/: dto.rs  service.rs
rust/src/domain/test/: controller.rs
rust/src/global/: middleware.rs  mod.rs  validator.rs
rust/src/models/: request.rs  response.rs
rust/tests/: api_test.rs  handler_test.rs
scripts/: auto-fix.sh  config-loader.py  create-issue.sh  create-pr.sh  daily-report.sh  diagnostic-agent.py  discord-alert.sh  log-watcher.sh  perf-alert.sh  quality-check.sh  requirements.txt  rollback-fix.sh  run-tests.sh  setup-cron.sh  setup-labels.sh  verify-conventions.sh  verify-fix.sh
(+224 files in other folders)
