[package]
name = "ai-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.20.0"
config = "0.14"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
lazy_static = "1.4"
chrono = "0.4"
