[package]
name = "web3-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AI
async-openai = "0.18"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error Handling
thiserror = "1"

# Async trait
async-trait = "0.1"

# Retry with exponential backoff
backoff = { version = "0.4", features = ["tokio"] }

# Security
subtle = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Configuration
dotenvy = "0.15"

# UUID for request tracing
uuid = { version = "1", features = ["v4"] }

# OpenAPI Documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Rate Limiting
tower_governor = "0.5"
governor = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
mockall = "0.13"
axum-test = "16"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
